# immich-sync-v1

./: .gitignore  LICENSE  NOTICE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: config.rs  credentials.rs  db.rs  immich.rs  lib.rs  main.rs  sync.rs
src/routes/: +page.svelte
