[package]
name = "immich-sync"
version = "0.0.3"
description = "Background folder sync to Immich (Windows)"
rust-version = "1.77"
authors = ["Benchwork"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "immich_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["full"] }
notify-debouncer-full = "0.7.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
keyring = "3.6.3"
dirs = "5"
sha1 = "0.10.6"
hex = "0.4.3"
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
parking_lot = "0.12.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-autostart = "2.5.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "blocking"] }
walkdir = "2.5.0"
image = { version = "0.25", default-features = false, features = ["png"] }
# Keeps MSRV compatible toolchains working (newer `time` needs Rust 1.88+).
time = "=0.3.36"
